--- a/app/src/main/res/layout/activity_closeet.xml
+++ b/app/src/main/res/layout/activity_closeet.xml
@@ -17,21 +17,22 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <TextView
+            <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Outer"
-                android:id="@+id/textView"
-                android:layout_weight="1" />
+                android:id="@+id/button7"
+                android:layout_weight="1"
+                android:onClick="outer" />
 
-            <TextView
+            <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Tops"
-                android:id="@+id/textView2"
+                android:id="@+id/button8"
+                android:onClick="tops"
                 android:layout_weight="1" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -40,21 +41,22 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <TextView
+            <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Dress"
-                android:id="@+id/textView3"
-                android:layout_weight="1" />
+                android:id="@+id/button9"
+                android:layout_weight="1"
+                android:onClick="dress" />
 
-            <TextView
+            <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Bottoms"
-                android:id="@+id/textView4"
-                android:layout_weight="1" />
+                android:id="@+id/button10"
+                android:layout_weight="1"
+                android:onClick="bottoms" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -63,21 +65,22 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <TextView
+            <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Accessories"
-                android:id="@+id/textView5"
-                android:layout_weight="1" />
+                android:text="Avvessories"
+                android:id="@+id/button11"
+                android:layout_weight="1"
+                android:onClick="accessories" />
 
-            <TextView
+            <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Shoes"
-                android:id="@+id/textView6"
-                android:layout_weight="1" />
+                android:id="@+id/button12"
+                android:layout_weight="1"
+                android:onClick="shoes" />
+
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
